<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.ed.inf.coinz.MainActivity">
    <item
        android:id="@+id/Main_Activity"
        android:orderInCategory="100"
        android:title="Play"
        app:showAsAction="never" />
    <item
        android:id="@+id/Modes_Option"
        android:orderInCategory="100"
        android:title="Bonus Features"
        app:showAsAction="never" />
    <item
        android:id="@+id/Wallet_Option"
        android:orderInCategory="100"
        android:title="Wallet"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Bank_Option"
        android:orderInCategory="100"
        android:title="Bank"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Chat_Option"
        android:orderInCategory="100"
        android:title="Chat"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Profile_Option"
        android:orderInCategory="100"
        android:title="Profile"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Rates_Option"
        android:orderInCategory="100"
        android:title="Rates"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/LogOut_Option"
        android:orderInCategory="100"
        android:title="Log Out"
        app:showAsAction="never"></item>
</menu>
