<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.ac.ed.inf.coinz.Wallet_Activity">
    <item
        android:id="@+id/Modes_Option"
        android:orderInCategory="100"
        android:title="Modes"
        app:showAsAction="never" />
    <item
        android:id="@+id/Wallet_Option"
        android:orderInCategory="100"
        android:title="Wallet"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/Bank_Option"
        android:orderInCategory="100"
        android:title="Bank"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/LogOut_Option"
        android:orderInCategory="100"
        android:title="Log Out"
        app:showAsAction="never"></item>
</menu>
